# hw_2_libraries

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: linters.yml  stress.yml  tests.yml
dynamic/: similarity.c  similarity.h
scripts/: build.sh  clang-formater.sh  cov-gen-dyn.sh  cov-gen-st.sh  linters.sh  stress.sh
static/: similarity.c  similarity.h
tests/: tests_sim.cpp
utils/: av  av_time.c  gen  input_generator.c
